fix(services):-refactorize entities model and exception handler
